[package]
name = "prototype_ae"
version = "0.1.0"
authors = ["Danny Student <dannygeisz@berkeley.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mccm = { path = "../mccm" }
codexc_log = { path = "../codexc_log" }
